packages/webapp/src/components/Widgets/ElapsedTime/styles.module.scss
/*
 *  Copyright 2025 LiteFarm.org
 *  This file is part of LiteFarm.
 *
 *  LiteFarm is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  LiteFarm is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 *  GNU General Public License for more details, see <https://www.gnu.org/licenses/>.
 */
 
@import '@assets/mixin.scss';

.container {
  display: flex;
  align-items: center;
}

.icon {
  min-width: 16px;
  min-height: 16px;
  & > svg {
    width: 16px;
  }
}

.duration {
  @include fontFamily();
  color: #000;
  text-align: right;
  font-size: 12px;
  font-weight: 600;
  line-height: 24px; /* 200% */
}

